# nix-result-checks

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  REUSE.toml  build.rs  clippy.toml  default.nix  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml  deploy.yml
keymaps/: colemak-dh.json  qwerty.json  qwerty.json.license
nix/: overlay.nix
nix/apps/nrc/: package.nix
nix/build-support/: mkEntries.nix  mkEval.nix  mkEvalChecks.nix  mkEvalTests.nix  mkReport.nix  mkResult.nix  mkResultSnapshot.nix  mkResultWith.nix  mkSkip.nix  mkSnapshot.nix  mkSnapshotWith.nix  requireSuccess.nix  requireSuccessWith.nix
nix/dev/: devshell.nix  flake-module.nix  flake.nix  nrc.nix  tests.nix
nix/dev/tests/: artifact.nix  eval.nix  lint.nix  require-success.nix  result.nix  skip.nix  snapshot.nix  suite.nix
nix/docs/docs-man/: package.nix
nix/docs/docs-mdbook/: package.nix
nix/docs/html-docs/: package.nix
nix/docs/man-pages/: package.nix
nix/docs/options-doc/: package.nix
nix/generators/json/: package.nix
nix/generators/kdl/: package.nix  template.mustache
nix/modules/resultChecks/: default.nix  flakeModule.nix  flakeOutput.nix
src/: app.rs  errorlog.rs  event.rs  main.rs  stream.rs  ui.rs
src/app/: mod.rs  tests.rs
src/config/: keymap.rs  mod.rs
src/input/: ingest.rs  mod.rs  terminal.rs  watcher.rs
src/render/: detail.rs  help.rs  list.rs  mod.rs  toast.rs
src/render/snapshots/: nrc__render__list__tests__renders_empty.snap  (+6 more)
src/runner/: mod.rs  select.nix  tests.rs
src/ui/: detail_view.rs  list_view.rs  mod.rs  tests.rs
(+1 files in other folders)
